--- a/arch/arm/boot/dts/qcom/sdm636_whyred.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm636_whyred.dtsi
@@ -56,10 +56,9 @@
 
 	devfreq_memlat_4: qcom,arm-memlat-mon-4 {
 		qcom,core-dev-table =
-			< 1113600 762 >,
-			< 1401600 3879 >,
-			< 2150400 5931 >,
-			< 2457600 6881 >;
+		< 1113600 762 >,
+		< 1401600 3879 >,
+		< 1804800 5163 >;
 	};
 
 	devfreq_cpufreq: devfreq-cpufreq {
@@ -68,8 +67,13 @@
 				< 1113600 762 >,
 				< 1401600 2086 >,
 				< 1747200 2929 >,
-				< 2150400 3879 >,
-				< 2457600 6881 >;
+				< 1804800 5163 >;
 		};
 	};
+};
+
+/* GPU overrides */
+&msm_gpu {
+		/* Update GPU chip ID*/
+		qcom,chipid = <0x05000900>;
 };
